@@ -596,7 +596,7 @@ include_once "include/page_header.php";
 			S_STATUS));
 
 
-		$sql = "select h.host,t.triggerid,t.description,t.priority,t.status,count(d.triggerid_up) as dep_count ".
+		$sql = "select h.host,t.triggerid,t.description,t.expression,t.priority,t.status,count(d.triggerid_up) as dep_count ".
 			" from hosts h,items i,functions f, triggers t left join trigger_depends d on d.triggerid_down=t.triggerid ".
 			" where f.itemid=i.itemid and h.hostid=i.hostid and t.triggerid=f.triggerid".
 			' and '.DBin_node('t.triggerid', $nodeid).
@@ -607,7 +607,7 @@ include_once "include/page_header.php";
 		if(isset($hostid)) 
 			$sql .= " and h.hostid=$hostid";
 
-		$sql .= " group by h.host, t.triggerid, t.description, t.priority, t.status".
+		$sql .= " group by h.host, t.triggerid, t.description, t.expression, t.priority, t.status".
 			" order by h.host,t.description";
 
 		$result=DBselect($sql);
