@@ -1,5 +1,6 @@
 Changes for 1.4.3:
 
+ - added numeric parameters support for trigger description "$1 $2 .. $9" (Eugene)
  - fixed SQL problem in Configuration->Graphs, all graphs selected (Alexei)
 
 Changes for 1.4.2:
